--- a/EraMejorGira/EraMejorGira/css/style.css
+++ b/EraMejorGira/EraMejorGira/css/style.css
@@ -65,7 +65,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background-image: url('img/fondo.jpg');
+    background-image: url('../img/fondo.jpg');
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -169,7 +169,7 @@ body {
     overflow: hidden;
 
     /* Background Image for Contact Section */
-    background-image: url('img/fondo2.jpg');
+    background-image: url("../img/fondo2.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
